--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="models/movable-object.class.js"></script>
+    <script src="models/character.class.js"></script>
+    <script src="models/chicken.class.js"></script>
+    <script src="models/world.class.js"></script>
     <script src="js/game.js"></script>
     <link rel="shortcut icon" href="img\6_salsa_bottle\salsa_bottle.png" type="image/x-icon">
     <title>El pollo loco</title>
