--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="models/chicken.class.js"></script>
     <script src="models/cloud.class.js"></script>
     <script src="models/world.class.js"></script>
+    <script src="models/background-object.class.js"></script>
     <script src="js/game.js"></script>
     <link rel="shortcut icon" href="img\6_salsa_bottle\salsa_bottle.png" type="image/x-icon">
     <title>El pollo loco</title>
