--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <script src="models/world.class.js"></script>
     <script src="models/background-object.class.js"></script>
     <script src="models/keyboard.class.js"></script>
+    <script src="models/level.class.js"></script>
+    <script src="models/endboss.class.js"></script>
+    <script src="levels/level1.js"></script>
     <script src="js/game.js"></script>
     <link rel="shortcut icon" href="img\6_salsa_bottle\salsa_bottle.png" type="image/x-icon">
     <title>El pollo loco</title>
