--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="models/chicken-small.class.js"></script>
     <script src="models/cloud.class.js"></script>
     <script src="models/healthbar.class.js"></script>
+    <script src="models/coins-bar.class.js"></script>
     <script src="models/world.class.js"></script>
     <script src="models/background-object.class.js"></script>
     <script src="models/keyboard.class.js"></script>
