--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="models/healthbar.class.js"></script>
     <script src="models/coins-bar.class.js"></script>
     <script src="models/bottle-bar.class.js"></script>
+    <script src="models/coins.class.js"></script>
     <script src="models/world.class.js"></script>
     <script src="models/background-object.class.js"></script>
     <script src="models/keyboard.class.js"></script>
