--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <script src="levels/level1.js"></script>
     <script src="js/game.js"></script>
     <link rel="shortcut icon" href="img\6_salsa_bottle\salsa_bottle.png" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css2?family=Gorditas&display=swap" rel="stylesheet">
     <title>El pollo loco</title>
 <body onload="init()">
     <h1>El pollo loco</h1>
