--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="models/healthbar.class.js"></script>
     <script src="models/coins-bar.class.js"></script>
     <script src="models/bottle-bar.class.js"></script>
+    <script src="models/healthbar-endboss.class.js"></script>
     <script src="models/cloud.class.js"></script>
     <script src="models/coins.class.js"></script>
     <script src="models/bottle.class.js"></script>
