--- a/index.html
+++ b/index.html
@@ -28,8 +28,11 @@
     <link rel="shortcut icon" href="img\6_salsa_bottle\salsa_bottle.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Gorditas&display=swap" rel="stylesheet">
     <title>El pollo loco</title>
-<body onload="init()">
+<body>
     <h1>El pollo loco</h1>
     <canvas id="canvas" width="720" height="480"></canvas>
+    <div id="startOverlay">
+        <button onclick="init()" id="startButton">Let's Go Loco</button>
+    </div>
 </body>
 </html>
