--- a/index.html
+++ b/index.html
@@ -31,7 +31,37 @@
     <h1>El pollo loco</h1>
     <canvas id="canvas" width="720" height="480"></canvas>
     <div id="startOverlay">
-        <button onclick="init()" id="startButton">Let's Go Loco</button>
+        <button onclick="showControlls()" id="controllsButton">Let's Go Loco</button>
+    </div>
+    <div id="controllsOverlay">
+        <h2>El pollo loco</h2>
+        <table id="controllsTable">
+            <tr>
+                <td><button>&#129106;</button></td>
+                <td><span>Walk Right</span></td>
+            </tr>
+            <tr>
+                <td><button>&#129104;</button></td>
+                <td><span>Walk Left</span></td>
+            </tr>
+            <tr>
+                <td><button>Space</button></td>
+                <td><span>Jump</span></td>
+            </tr>
+            <tr>
+                <td><button>D</button></td>
+                <td><span>Throw Bottle</span></td>
+            </tr>
+        </table>
+        <button onclick="init()" id="startButton">Start</button>
+    </div>
+    <div id="winOverlay">
+        <button onclick="backToMainScreen()" id="backToMainScreenButton">Main Menu</button>
+        <button onclick="init()" id="restartGame">Try Again</button>
+    </div>
+    <div id="loseOverlay">
+        <button onclick="backToMainScreen()" id="backToMainScreenButton">Main Menu</button>
+        <button onclick="init()" id="restartGame">Try Again</button>
     </div>
 </body>
 </html>
