--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
     </div>
     <div id="winOverlay">
         <button onclick="backToMainScreen()" id="backToMainScreenButton">Main Menu</button>
-        <button onclick="init()" id="restartGame">Try Again</button>
+        <button onclick="init()" id="restartGameButton">Try Again</button>
     </div>
     <div id="loseOverlay">
         <button onclick="backToMainScreen()" id="backToMainScreenButton">Main Menu</button>
-        <button onclick="init()" id="restartGame">Try Again</button>
+        <button onclick="init()" id="restartGameButton">Try Again</button>
     </div>
 </body>
 </html>
