--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <canvas id="canvas" width="720" height="480"></canvas>
     <div id="startOverlay">
         <button onclick="showControlls()" id="controllsButton">Let's Go Loco</button>
+        <a id="impressum" href="impressum.html">Impressum</a>
     </div>
     <div id="controllsOverlay">
         <h2>El pollo loco</h2>
