added mobile Buttons

--- a/index.html
+++ b/index.html
@@ -33,6 +33,14 @@
         <div id="canvasarea">
             <canvas id="canvas" width="720" height="480"></canvas>
             <button id="muteButton" onclick="SoundHub.toggleMute(); this.blur();">🔊</button>
+            <div id="moveButtons">
+                <button id="touchWalkLeftButton">&#129104;</button>
+                <button id="touchWalkRightButton">&#129106;</button>
+            </div>
+            <div id="actionButtons">
+                <button id="touchJumpButton">Space</button>
+                <button id="touchThrowBottleButton">D</button>
+            </div>
             <div id="startOverlay">
                 <button onclick="showControlls()" id="controllsButton">Let's Go Loco</button>
                 <a id="impressum" href="impressum.html">Impressum</a>
@@ -55,10 +63,6 @@
                     <tr>
                         <td><button>D</button></td>
                         <td><span>Throw Bottle</span></td>
-                    </tr>
-                    <tr>
-                        <td><button>M</button></td>
-                        <td><span>Mute/Activate Sound</span></td>
                     </tr>
                 </table>
                 <button onclick="init()" id="startButton">Start</button>
