added mobile detection

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Gorditas&display=swap" rel="stylesheet">
     <title>El pollo loco</title>
 <body>
+    <div id="rotateOverlay">
+        <p>El pollo Loco<br><br>Rotate your screen to get started!</p>
+    </div>
     <div id="contentarea">
         <h1>El pollo loco</h1>
         <div id="canvasarea">
